# calcimetry

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
ai/: dataset.py  models.py  normalize.py  training.py
calcimetry/: calcimetry_api.py  carrot_img.py  config.py  dataset_api.py  measurement.py  meta_singleton.py  mongo_api.py  pipelines.py  polyline.py  quality.py  thumbnail.py  thumbnail_api.py  use_server.py
clickclick/: README.md  calculate_quality.py  create-database.py  excel2csv.py  image_clicks.py  import_calcimetry_mongodb.py  import_images_mongodb.py  local_database.py
database/: GTR2010-01_0002_OHZ1302_calcimétrie.csv  Pick_Crop_ScrollImage.py  Prog1.py  ReadCalci_CSV.py  extract_ml_dataset.py  update_db.py  use_server.py  xls_to_mongo.py
docker/: Dockerfile.infer  docker-compose.yml
docs/: regression.md  regression.tex
flask/: flaskapp.py  note_api.py
infer/: flaskapp.py  inferator.py  utils.py
note/: flaskapp.py
notebooks/: .gitignore  BRISQUE_data.pkl  ExtraTreesRegressor.ipynb  QC-database.ipynb  QC-measurements.ipynb  calcimetry_api.ipynb  click_click.ipynb  deep_regression.ipynb  get_set_from_df.ipynb  image-quality-score.ipynb  image-quality.ipynb  measurements-write.ipynb  mongodb-write.ipynb  open-an-image.ipynb  open-image-calcimetry.ipynb  regression.ipynb  regressionV2.ipynb  regression_w_inference.ipynb  single_calcimetry_import.ipynb  single_image_import.ipynb  test-quality-class.ipynb
scripts/: config.json  create_dataset.py  find_lr.py  optimize.py  predict.py  (+4 more)
(+60 files in other folders)
