[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]   
name='Calcimetry'
version='0.1'
description='module pour gérér les données Calcimetries de l andra'
authors= [
    {name="Jef Lecomte", email="jean-francois.lecomte@ifpen.fr"}
]

[tool.setuptools.packages]
find = {}
