[build-system]

requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]

name = "ai.calcimetry"
version = "0.1"

authors = [
  { name="Jean-François Lecomte", email="jean-francois.lecomte@ifpen.fr" }
]

description = "module pour des modèles profonds de calcimetry"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["calcimetry", "ai"]